--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,38 @@
 /build/
 /dist/
 /src/*.class
+report/researchPapers/A Distributed Object Model for the Java System.pdf
+
+report/researchPapers/A PERFORMANCE EVALUATION OF RPC, JAVA RMI, MPI AND PVM.pdf
+
+report/researchPapers/Wireless Java RMI.pdf
+
+report/researchPapers/Use of Java RMI on Mobile Devices for Peer to Peer Computing.pdf
+
+report/researchPapers/Transparent Consistent Replication of Java RMI Objects.pdf
+
+report/researchPapers/Software architecture design for streaming Java RMI.pdf
+
+report/researchPapers/Performance Comparison Of JRMI vs Java Messaging Service.pdf
+
+report/researchPapers/Java RMI and dotNet Remoting Performance Comparison.pdf
+
+report/researchPapers/JRMI vs dotNET Remoting Arch Comp & Perf Eval.pdf
+
+report/researchPapers/Mobility and Java RMI.pdf
+
+report/researchPapers/Securing Java RMI-based Distributed Applications.pdf
+
+report/researchPapers/Supt & Opt of JRMI over Wless Envir.pdf
+
+report/researchPapers/Efficient Object Caching for Distributed Java RMI Applications.pdf
+
+report/researchPapers/Efficient Implementations of Java Remote Method Invocation.pdf
+
+report/researchPapers/Eff of Dist Par Proc using JRMI Soc & CORBA.pdf
+
+report/researchPapers/Comparison of CORBA and Java RMI Based on Performance Analysis.pdf
+
+report/researchPapers/An Overview of Portable Distributed Techniques.pdf
+
+report/researchPapers/An Efficient Implementation of Java’s Remote Method Invocation.pdf
